--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_animation_set
 description: A new flutter plugin project.
 version: 0.0.1
-author:
-homepage:
+author: AndroidHensen <xyj510402535@qq.com>
+homepage: https://github.com/efoxTeam/flutter-animation-set
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
