--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_animation_set
-description: A new flutter plugin project.
-version: 0.0.1
+description: Easy to build a animation set
+version: 1.0.0
 author: AndroidHensen <xyj510402535@qq.com>
 homepage: https://github.com/efoxTeam/flutter-animation-set
 
