--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,8 @@ author: AndroidHensen <xyj510402535@qq.com>
 homepage: https://github.com/efoxTeam/flutter-animation-set
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
